--- a/css/productos.css
+++ b/css/productos.css
@@ -168,9 +168,11 @@ body {
 .modal-card {
   background: var(--black-card);
   border-radius: var(--radius);
-  padding: 1.5rem;
-  width: 380px;
+  padding: 1.75rem;
+  width: 520px;
+  max-width: 95%;
 }
+
 
 .hidden {
   display: none;
@@ -190,7 +192,7 @@ body {
 .modal-body {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+   gap: 1.1rem;
 }
 
 /* Grupo */
@@ -266,6 +268,34 @@ body {
   }
 }
 
+@media (max-width: 420px) {
+
+  .topbar {
+    padding: 12px 16px;
+    gap: 10px;
+  }
+
+  .topbar h2 {
+    font-size: .95rem;
+    line-height: 1.2;
+  }
+
+  .top-actions {
+    gap: 8px;
+  }
+
+  .top-actions input {
+    padding: 10px 14px;
+    font-size: .8rem;
+  }
+
+  .top-actions .btn {
+    padding: 10px;
+    font-size: .8rem;
+  }
+}
+
+
 
 
 
@@ -309,5 +339,53 @@ body {
   }
 }
 
+@media (max-width: 420px) {
+  .topbar {
+    position: relative;
+  }
+}
+
+@media (max-width: 420px) {
+  #btnAddProduct {
+    font-weight: 500;
+    letter-spacing: .3px;
+  }
+}
 
 
+
+/* ANIMACION BORRAR CARD */
+
+.fade-out {
+  opacity: 0;
+  transform: scale(0.95);
+  transition: all 0.3s ease;
+}
+
+
+.toast {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  background: #111;
+  color: white;
+  padding: 12px 18px;
+  border-radius: 12px;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.3s ease;
+  z-index: 9999;
+}
+
+.toast.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.toast.success {
+  background: #22c55e;
+}
+
+.toast.error {
+  background: #ef4444;
+}
